fixed textearea resizing, got rid off the scrollbar, fixed some bugs

--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -26,3 +26,10 @@ body {
   margin: auto;
   
 }
+
+/* @media only screen and (min-width: 320px){
+  body {
+    background-color: red;
+  }
+ */
+}
