--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -26,3 +26,7 @@ nav {
   justify-content: center;
   align-items: center;
 }
+
+#double-arrow {
+  color: red;
+}
